# auv_ws

arduino/: arduino.cpp
control_pwm/: setup.py
control_pwm/control_pwm/: control_node.py  teleop_key_pub.py
sauvc_sim/: CMakeLists.txt  LICENSE.txt  package.xml
sauvc_sim/config/: bridge.yaml
sauvc_sim/env-hooks/: sauvc_sim.dsv.in
sauvc_sim/launch/: sauvc_launch.py
sauvc_sim/models/blue_drum/: model.sdf
sauvc_sim/models/blue_flare/: model.sdf
sauvc_sim/models/drum/: model.sdf
sauvc_sim/models/gate/: model.sdf
sauvc_sim/models/golf_ball/: model.sdf
sauvc_sim/models/green_mat/: model.sdf
sauvc_sim/models/orange_flare/: model.sdf
sauvc_sim/models/pool_ground/: model.config  model.sdf
sauvc_sim/models/pool_ground/materials/scripts/: pool_ground.material
sauvc_sim/models/pool_ground25/: model.config  model.sdf
sauvc_sim/models/pool_ground25/materials/scripts/: pool_ground.material
sauvc_sim/models/q_gate/: model.sdf
sauvc_sim/models/red_drum/: model.sdf
sauvc_sim/models/red_flare/: model.sdf
sauvc_sim/models/wall/: model.sdf
sauvc_sim/models/yellow_flare/: model.sdf
sauvc_sim/scripts/: teleop.py
sauvc_sim/urdf/: plugins.xacro  robot.urdf.xacro  sensors.xacro  thrusters.xacro
sauvc_sim/worlds/: sauvc25.world
